[tool.poetry]
name = "pyspark-bdd-poetry"
version = "0.1.0"
description = ""
authors = ["awongCM <awong.cm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"
pandas = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.4"
pytest-bdd = "7.0.1"
coverage = "7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
